add: footer-type-3, ref: footer

--- a/src/shared/components/bottom-menu/bottom-menu.module.scss
+++ b/src/shared/components/bottom-menu/bottom-menu.module.scss
@@ -20,10 +20,11 @@
       align-items: flex-start;
     }
 
-    li a {
-      text-decoration: underline;
-      font-size: var(--fs-xs);
-      color: var(--white);
+    li {
+      a {
+        text-decoration: underline;
+        font-size: var(--fs-xs);
+      }
     }
   }
 }
