--- a/src/components/services/components/services-type-4/services-type-4.module.scss
+++ b/src/components/services/components/services-type-4/services-type-4.module.scss
@@ -1,59 +1,23 @@
-@import '../../../shared/styles/extends.scss';
-@import '../../../shared/styles/mixins.scss';
+@import '../../../../shared/styles/extends.scss';
+@import '../../../../shared/styles/mixins.scss';
 
-.root {
-  @extend %section-offset;
-
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: calc(var(--gap-sm) * 4)
-      clamp(var(--gap-lg), 4vw, var(--gap-sm) * 4);
-
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.base_title {
-  text-align: center;
-  color: var(--primary);
-}
-
-.item {
+.list {
   display: grid;
-  grid-template-columns: 240px auto;
-  gap: clamp(var(--gap-sm), 4vw, var(--gap-lg));
-  height: 100%;
+  grid-template-columns: repeat(2, 1fr);
 
-  @include media-down($desktop-width) {
-    display: flex;
-    flex-direction: column;
+  @include container-down('root', 640px) {
+    grid-template-columns: 1fr;
   }
 
-  img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
+  &_item {
+    display: grid;
+    grid-template-columns: 240px auto;
+    gap: clamp(var(--gap-sm), 4vw, var(--gap-lg));
+    height: 100%;
 
-    // @include media-down($desktop-width) {
-    //   width: 100%;
-    //   max-height: 360px;
-    // }
-  }
-
-  &_content {
-    @extend %flex-column;
-    gap: var(--gap-sm);
-
-    @include media-down($desktop-width) {
-      flex-grow: 1;
-    }
-
-    button {
-      margin-top: auto;
+    @include container-down('root', 1240px) {
+      display: flex;
+      flex-direction: column;
     }
   }
 }
