--- a/src/components/services/components/services-type-5/services-type-5.module.scss
+++ b/src/components/services/components/services-type-5/services-type-5.module.scss
@@ -1,77 +1,58 @@
-@import '../../../shared/styles/extends.scss';
-@import '../../../shared/styles/mixins.scss';
+@import '../../../../shared/styles/extends.scss';
+@import '../../../../shared/styles/mixins.scss';
 
-.root {
-  @extend %section-offset;
+.list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl));
-
-    @include media-down(1360px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.base_title {
-  text-align: center;
-  color: var(--primary);
-}
-
-.item {
-  @extend %flex-column;
-  height: 100%;
-  position: relative;
-
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    content: '';
-    z-index: 0;
+  @include container-down('root', 1140px) {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  img {
-    position: absolute;
-    color: transparent;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    object-fit: cover;
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
   }
 
-  &_content {
-    position: relative;
+  &_item {
     @extend %flex-column;
-    gap: var(--gap-sm);
     height: 100%;
-    padding: var(--gap-sm) clamp(var(--gap-sm), 4vw, var(--gap-lg));
-    padding-top: 40%;
-    z-index: 1;
-    margin-top: auto;
+    position: relative;
 
-    @include media-down($tablet-lg-width) {
-      padding-top: 30%;
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      content: '';
+      z-index: 0;
     }
 
-    button {
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+
+    &_content {
+      position: relative;
+      height: 100%;
+      padding: var(--gap-sm) clamp(var(--gap-sm), 4vw, var(--gap-lg));
+      padding-top: 40%;
+      z-index: 1;
       margin-top: auto;
-    }
 
-    & > * {
-      color: var(--white);
+      @include media-down($tablet-lg-width) {
+        padding-top: 30%;
+      }
+
+      & > * {
+        color: var(--white);
+      }
     }
   }
 }
