--- a/src/shared/styles/variables/colors.scss
+++ b/src/shared/styles/variables/colors.scss
@@ -11,6 +11,7 @@ $dark: #111928;
 $light: #1a56db;
 $lighter: #d1d5db;
 $gray: #6b7280;
+$green: #046C4E;
 
 :root {
   --white: #{$white};
@@ -26,6 +27,7 @@ $gray: #6b7280;
   --light: #{$white};
   --lighter: #{$lighter};
   --gray: #{$gray};
+  --green: #{$green};
 
   // --success: #28a745;
   // --warning: #ffc107;
