--- a/src/shared/components/slider/slider-housing-list/slider-housing-list.module.scss
+++ b/src/shared/components/slider/slider-housing-list/slider-housing-list.module.scss
@@ -2,42 +2,52 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--gap-xxl);
+  gap: 12px;
+  width: 100%;
+  min-width: 420px;
 }
 
-.navigation {
+.slider-housing-list-pagination {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  margin-top: 20px;
+}
 
-  &_line {
-    display: flex;
-    gap: var(--gap-sm);
-  }
+.swiper-pagination-bullet {
+  width: 24px !important;
+  height: 2px !important;
+  background: #D1D5DB !important;
 }
 
 .slide {
   height: auto;
 }
 
-.button {
+.slider_housing_list_button {
+  position: absolute;
+  top: 50%;
   width: 48px;
   height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
-  background-color: transparent;
-  border-radius: 50%;
-  border: 1px solid var(--primary);
+  background: rgba(0, 0, 0, 0.7);
   cursor: pointer;
   transition: opacity var(--base-transition);
+  z-index: 10;
 
   &:hover {
     opacity: 0.8;
   }
 
   &_next {
+    right: 10px;
     transform: rotate(180deg);
+  }
+
+  &_prev {
+    left: 10px;
   }
 }
