--- a/src/components/header/components/header.module.scss
+++ b/src/components/header/components/header.module.scss
@@ -16,25 +16,34 @@
   margin-right: auto;
 }
 
-.contact {
-  ul {
-    flex-direction: row;
-    gap: var(--gap-xl);
-
-    li {
-      a {
-        text-decoration: none;
-        color: var(--primary);
-        font-size: var(--fs-sm);
-      }
-    }
-  }
-}
-
 .rounded_xs .btn {
   border-radius: 5px;
 }
 
 .rounded_lg .btn {
   border-radius: 30px;
+}
+
+.address {
+  align-items: flex-start;
+  max-width: 300px;
+}
+
+.info {
+  @extend %flex-column;
+  gap: var(--gap-xs);
+}
+
+.icon {
+  @extend %flex-align;
+  gap: var(--gap-xs);
+
+  a {
+    color: var(--base-text);
+    transition: var(--base-transition);
+
+    &:hover {
+      color: var(--primary);
+    }
+  }
 }
