--- a/src/components/news/components/news-type-6/news-type-6.module.scss
+++ b/src/components/news/components/news-type-6/news-type-6.module.scss
@@ -1,97 +1,41 @@
-@import '../../../shared/styles/extends.scss';
-@import '../../../shared/styles/mixins.scss';
+@import '../../../../shared/styles/extends.scss';
+@import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
+  container: root / inline-size;
 }
 
-.item {
+.list_item {
   @extend %flex-column;
   gap: var(--gap-sm);
-  border-radius: 5px;
   height: 100%;
 
-  img {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-
-    @include media-down(500px) {
-      max-height: 200px;
-    }
-  }
-
-  &_info {
+  &_content {
     @extend %flex-column;
-    gap: var(--gap-sm);
-    flex: 1;
-  }
+    flex-grow: 1;
+    color: var(--dark);
 
-  &_list {
-    @extend %list-reset;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: var(--gap-sm);
-
-    &__item {
-      font-size: var(--fs-xs);
+    & > img {
+      object-fit: cover;
+      aspect-ratio: 8/3;
+      object-position: top;
     }
 
-    &__category {
-      padding: 4px 10px;
-      position: relative;
+    &_wrapper {
+      flex-grow: 1;
 
-      &::before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        content: '';
-        border-radius: 4px;
-        background-color: var(--primary);
-        opacity: var(--tooltip-opacity);
-      }
-    }
-  }
-
-  p {
-    font-size: clamp(var(--fs-xs), 1.6vw, var(--fs-sm));
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    line-clamp: 3;
-    -webkit-line-clamp: 3;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    margin-top: auto;
-  }
-
-  &_link {
-    transition: opacity var(--base-transition);
-    display: flex;
-    align-items: center;
-    gap: var(--gap-sm);
-    width: fit-content;
-
-    svg {
-      path {
-        fill: var(--primary);
+      button {
+        margin-top: auto;
+        padding-bottom: 0;
       }
     }
 
-    &:hover {
-      opacity: 0.8;
+    .base_subtitle {
+      @include text-truncate(3);
     }
-  }
-}
 
-.base_subtitle {
-  transition: color var(--base-transition);
-  &:hover {
-    color: var(--primary);
+    .base_text {
+      @include text-truncate(5);
+    }
   }
 }
