--- a/src/components/news/components/news.module.scss
+++ b/src/components/news/components/news.module.scss
@@ -27,6 +27,13 @@
       gap: var(--gap-sm);
     }
 
+    &_header {
+      @extend %flex-wrap;
+      align-items: center;
+      gap: var(--gap-xs);
+      margin: var(--gap-xxs) 0;
+    }
+
     &_footer {
       margin-top: auto;
       padding-top: var(--gap-sm);
