--- a/src/components/result-list-column/components/result-list-column.module.scss
+++ b/src/components/result-list-column/components/result-list-column.module.scss
@@ -35,6 +35,8 @@
     &_gallery {
       max-width: 540px;
       min-width: 200px;
+      height: 100%;
+      max-height: 333px;
     }
 
     &_gallery_slide {
@@ -46,7 +48,8 @@
 
     &_content {
       @extend %flex-column;
-      flex-grow: 1;
+      height: 100%;
+      max-height: fit-content;
       gap: var(--gap-base);
 
       &_badge {
@@ -62,12 +65,20 @@
         font-weight: var(--fw-m);
         font-size: var(--fs-lg);
         color: var(--dark);
+
+        @include container-down('root', $tablet-width) {
+          @include text-truncate(1);
+        }
       }
 
       .base_subtitle {
         font-weight: var(--fw-r);
         font-size: var(--fs-sm);
         color: var(--dark);
+
+        @include container-down('root', $tablet-width) {
+          @include text-truncate(1);
+        }
       }
 
       .base_text {
@@ -103,23 +114,60 @@
     &_properties {
       display: grid;
       grid-template-columns: 1fr;
-      column-gap: 128px;
-      row-gap: 8px;
       padding: 16px 0;
       border-top: 1px solid var(--lighter);
       border-bottom: 1px solid var(--lighter);
+      margin-bottom: auto;
 
-      &_details {
-        @extend %flex-align;
-        font-weight: var(--fw-r);
-        font-size: var(--fs-sm);
-        color: var(--lighter);
+      &_content {
+        @extend %flex-column;
+        &_details {
+          @extend %flex-align;
+          font-weight: var(--fw-r);
+          font-size: var(--fs-sm);
+          color: var(--lighter);
+        }
+
+        &_details span:last-child {
+          margin-left: auto;
+          font-weight: var(--fw-m);
+          color: var(--dark);
+        }
+      }
+    }
+
+    &_properties_alt {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: var(--gap-base);
+      margin-bottom: auto;
+
+      @include container-down('root', $tablet-lg-width) {
+        grid-template-columns: 1fr;
       }
 
-      &_details span:last-child {
-        margin-left: auto;
-        font-weight: var(--fw-m);
-        color: var(--dark);
+      &_details {
+        @extend %flex-column;
+        padding: 8px 16px;
+        height: 100%;
+        max-height: 84px;
+        background: var(--white);
+        border: 1px solid var(--lighter);
+
+        &_title {
+          font-weight: var(--fw-r);
+          font-size: var(--fs-sm);
+          color: var(--primary);
+          padding-bottom: 8px;
+          border-bottom: 1px solid var(--lighter);
+        }
+
+        &_desc {
+          font-weight: var(--fw-r);
+          font-size: var(--fs-sm);
+          color: var(--gray);
+          padding-top: 8px;
+        }
       }
     }
 
@@ -134,6 +182,18 @@
       font-weight: var(--fw-r);
       font-size: var(--fs-sm);
       color: var(--lighter);
+    }
+
+    &_show_more {
+      width: fit-content;
+      padding: 0px 8px;
+      height: 24px;
+      background: #f3f4f6;
+      border: 1px solid #d1d5db;
+      font-weight: 400;
+      font-size: 16px;
+      color: #111928;
+      cursor: pointer;
     }
   }
 }
