--- a/src/components/hero/components/hero.module.scss
+++ b/src/components/hero/components/hero.module.scss
@@ -1,7 +1,4 @@
 .root {
-}
-
-.root {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -95,6 +92,30 @@
   }
 }
 
-.select svg {
-  display: none;
+.select {
+  // svg {
+  //   display: none;
+  // }
+
+  input {
+    padding: 13px 44px 13px 12px;
+    border-radius: 10px;
+    width: fit-content;
+    color: var(--gray);
+    outline: none;
+    width: 100%;
+    min-width: 251px;
+  }
+}
+
+.input {
+  input {
+    padding: 15px 44px 15px 12px;
+    border-radius: 10px;
+    width: fit-content;
+    color: var(--gray);
+    outline: none;
+    width: 100%;
+    min-width: 251px;
+  }
 }
