--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -81,7 +81,8 @@ a {
   width: 24px !important;
   height: 2px !important;
   background: #d1d5db !important;
-  
+}
+
 .menu-container {
   display: flex;
   align-items: center;
