--- a/src/components/result-list-column/components/result-list-column.module.scss
+++ b/src/components/result-list-column/components/result-list-column.module.scss
@@ -26,7 +26,7 @@
   &_item {
     display: grid;
     grid-template-columns: 1fr;
-    gap: var(--gap-sm);
+    gap: var(--gap-md);
 
     &_price {
       color: var(--primary);
@@ -48,9 +48,10 @@
 
     &_content {
       @extend %flex-column;
-      height: 100%;
       max-height: fit-content;
       gap: var(--gap-base);
+      height: 100%;
+      min-height: 533px;
 
       &_badge {
         padding: 4px 10px;
@@ -140,7 +141,6 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: var(--gap-base);
-      margin-bottom: auto;
 
       @include container-down('root', $tablet-lg-width) {
         grid-template-columns: 1fr;
