--- a/src/components/hero/components/hero.module.scss
+++ b/src/components/hero/components/hero.module.scss
@@ -62,12 +62,13 @@
       padding: 0;
       margin: 0;
       cursor: pointer;
-      padding: 15px 24px;
-      border-radius: 10px;
+      padding: 16px 24px;
+      border-radius: 8px;
       color: var(--gray);
+      font-size: var(--fs-sm);
       transition:
-        color var(--slow-transition),
-        background-color var(--slow-transition);
+        color 0.2s ease-in-out,
+        background-color 0.2s ease-in-out;
 
       &:hover {
         color: var(--primary);
@@ -78,6 +79,10 @@
         color: var(--primary);
         cursor: auto;
       }
+    }
+
+    &::before {
+      display: none;
     }
   }
 
@@ -100,11 +105,12 @@
   input {
     padding: 13px 44px 13px 12px;
     border-radius: 10px;
-    width: fit-content;
+    // width: fit-content;
     color: var(--gray);
     outline: none;
-    width: 100%;
-    min-width: 251px;
+    // width: 100%;
+    // min-width: 251px;
+    min-height: 48px;
   }
 }
 
