--- a/src/components/blog-detail/components/blog-detail-type-7/blog-detail-type-7.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-7/blog-detail-type-7.module.scss
@@ -1,11 +1,6 @@
-@import '../../../shared/styles/extends.scss';
-@import '../../../shared/styles/mixins.scss';
-
-.root {
-  @extend %section-offset;
-}
+@import '../../../../shared/styles/extends.scss';
+@import '../../../../shared/styles/mixins.scss';
 
 .base_title {
   text-align: center;
-  color: var(--primary);
 }
