--- a/src/components/blog-detail/components/blog-detail.module.scss
+++ b/src/components/blog-detail/components/blog-detail.module.scss
@@ -2,41 +2,6 @@
 @import '../../../shared/styles/mixins.scss';
 
 .root {
+  @extend %section-offset;
   container: root / inline-size;
-}
-
-.list {
-  @extend %list-reset;
-
-  gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-  width: 100%;
-
-  &_item_content {
-    gap: var(--gap-sm);
-    height: 100%;
-
-    & > img {
-      display: block;
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-
-    &_wrapper {
-      @extend %flex-column;
-      gap: var(--gap-sm);
-    }
-
-    &_header {
-      @extend %flex-wrap;
-      align-items: center;
-      gap: var(--gap-xs);
-      margin: var(--gap-xxs) 0;
-    }
-
-    &_footer {
-      margin-top: auto;
-      padding-top: var(--gap-sm);
-    }
-  }
 }
