--- a/src/components/blog-detail/components/blog-detail-type-3/blog-detail-type-3.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-3/blog-detail-type-3.module.scss
@@ -1,26 +1,15 @@
-@import '../../../shared/styles/extends.scss';
-@import '../../../shared/styles/mixins.scss';
+@import '../../../../shared/styles/extends.scss';
+@import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
-
   &_header {
     @extend %flex-column;
     gap: var(--gap-md);
-  }
 
-  .author_block {
-    margin-bottom: var(--gap-md);
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
   }
-
-  small {
-    display: block;
-    font-size: 16px;
-    margin-bottom: var(--gap-xs);
-    color: var(--gray);
-  }
-}
-
-.base_title {
-  color: var(--primary);
 }
