--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -121,84 +121,55 @@ a {
   }
 }
 
-.mantine-Autocomplete-options,
-.mantine-Select-dropdown {
-  position: absolute;
-  background-color: #fff;
-  padding-inline: 12px;
-  border-radius: 10px;
+// .mantine-Autocomplete-options,
+// .mantine-Select-dropdown {
+//   position: absolute;
+//   background-color: #fff;
+//   padding-inline: 12px;
+//   border-radius: 10px;
 
-  > div {
-    overflow: auto;
-  }
+//   > div {
+//     overflow: auto;
+//   }
 
-  svg {
-    display: none;
-  }
-}
+//   svg {
+//     display: none;
+//   }
+// }
 
-.mantine-ScrollArea-viewport {
-  overflow: auto !important;
-}
+// .mantine-ScrollArea-viewport {
+//   overflow: auto !important;
+// }
 
-.mantine-Select-option {
-  color: var(--gray);
-  cursor: pointer;
-  &:not(:last-child) {
-    border-bottom: 1px solid var(--gray);
-    padding-bottom: 8px;
-    margin-bottom: 8px;
-  }
+// .mantine-Select-option {
+//   color: var(--gray);
+//   cursor: pointer;
+//   &:not(:last-child) {
+//     border-bottom: 1px solid var(--gray);
+//     padding-bottom: 8px;
+//     margin-bottom: 8px;
+//   }
 
-  &[aria-selected='true'] {
-    color: var(--black);
-  }
-}
+//   &[aria-selected='true'] {
+//     color: var(--black);
+//   }
+// }
 
-.mantine-MultiSelect-input {
-  height: 48px;
-  border-radius: 10px;
-}
+// .mantine-MultiSelect-input {
+//   height: 48px;
+//   border-radius: 10px;
+// }
 
-.mantine-MultiSelect-input .mantine-MultiSelect-pillsList {
-  height: 100%;
-}
+// .mantine-MultiSelect-input .mantine-MultiSelect-pillsList {
+//   height: 100%;
+// }
 
-.mantine-Input-wrapper,
-.mantine-Autocomplete-wrapper {
-  display: flex;
-  align-items: center;
-  position: relative;
-
-  // div {
-  //   position: absolute;
-  //   right: 14px;
-  //   top: 14px;
-  //   bottom: 14px;
-  //   z-index: 0;
-  //   width: 20px;
-  //   height: 20px;
-  // }
-}
-
-.visible-items {
-  white-space: nowrap;
-  ul {
-    // display: flex;
-    // justify-content: center;
-    display: inline-block;
-
-    li {
-      list-style-type: none;
-      // text-wrap: nowrap;
-      padding: 1em;
-      display: inline-block;
-      // &:not(:last-child) {
-      //   margin-right: var(--gap-xl);
-      // }
-    }
-  }
-}
+// .mantine-Input-wrapper,
+// .mantine-Autocomplete-wrapper {
+//   display: flex;
+//   align-items: center;
+//   position: relative;
+// }
 
 .hidden-items {
   cursor: pointer;
