--- a/src/components/hero/components/hero.module.scss
+++ b/src/components/hero/components/hero.module.scss
@@ -97,31 +97,27 @@
   }
 }
 
-.select {
-  input {
-    padding: 13px 30px 13px 12px;
-    width: 210px;
-    border-radius: 10px;
-    color: var(--gray);
-    outline: none;
-    min-height: 48px;
-  }
-}
-
 .input {
-  input {
-    padding: 15px 44px 15px 12px;
-    border-radius: 10px;
-    width: fit-content;
-    color: var(--gray);
-    outline: none;
-    width: 100%;
-    min-width: 251px;
-  }
+  padding: 15px 44px 15px 12px;
+  border-radius: 10px;
+  width: fit-content;
+  color: var(--gray);
+  outline: none;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
 .multi_select {
   width: 150px;
-  min-height: 48px;
-  // padding: 15px 44px 15px 12px;
+}
+
+.pillsList {
+  flex-wrap: nowrap;
+  overflow: hidden;
+
+  span {
+  }
 }
