--- a/src/components/hero/ui/hero-ui.module.scss
+++ b/src/components/hero/ui/hero-ui.module.scss
@@ -19,6 +19,28 @@
   border: 1px solid rgb(107, 114, 128);
   border-radius: 10px;
   background: rgb(255, 255, 255);
+  padding: 12px;
+
+  &_item {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-base);
+
+    input {
+      border: 1px solid rgb(209, 213, 219);
+      border-radius: 5px;
+      padding-inline: var(--gap-base);
+      height: 32px;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 8px;
+    }
+  }
 }
 
 .option {
