--- a/src/components/hero/ui/hero-ui.module.scss
+++ b/src/components/hero/ui/hero-ui.module.scss
@@ -1,10 +1,8 @@
 .input {
-  padding: 15px 44px 15px 12px;
+  padding-block: 0;
   border-radius: 10px;
-  width: fit-content;
   color: var(--gray);
   outline: none;
-  width: 100%;
   height: 48px;
   display: flex;
   align-items: center;
@@ -13,6 +11,7 @@
   font-size: 16px;
   white-space: nowrap;
   text-overflow: ellipsis;
+  max-width: 213px;
 }
 
 .dropdown {
