--- a/src/components/item-detail/components/item-detail.module.scss
+++ b/src/components/item-detail/components/item-detail.module.scss
@@ -12,11 +12,16 @@
     align-items: center;
     margin-bottom: 16px;
 
-    @include container-down('root', 1200px) {
+    &_column {
+      flex-wrap: nowrap;
+    }
+
+    @include container-down('root', 900px) {
       &_column {
         flex-direction: column;
         align-items: flex-start;
-        gap: 16px;
+        column-gap: var(--gap-xl);
+        row-gap: var(--gap-sm);
       }
     }
 
@@ -28,6 +33,7 @@
     &_gallery_slide {
       width: 100%;
       height: 100%;
+      min-height: 210px;
       max-height: 500px;
       object-fit: cover;
     }
@@ -49,6 +55,13 @@
       border-top: 1px solid var(--lighter);
       border-bottom: 1px solid var(--lighter);
 
+      @include container-down('root', $tablet-lg-width) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @include container-down('root', $mobile-width) {
+        grid-template-columns: 1fr;
+      }
+
       &_item {
         display: flex;
         align-items: flex-start;
@@ -63,7 +76,7 @@
           @extend %flex-align;
           font-weight: var(--fw-r);
           font-size: var(--fs-sm);
-          color: var(--lighter);
+          color: var(--gray);
         }
 
         &_value {
@@ -77,7 +90,7 @@
     &_note {
       font-weight: var(--fw-r);
       font-size: var(--fs-sm);
-      color: var(--lighter);
+      color: var(--gray);
       margin: 16px 0;
     }
 
@@ -87,23 +100,42 @@
       width: 100%;
       margin-bottom: 32px;
 
+      @include container-down('root', $mobile-width) {
+        flex-direction: column;
+      }
+
       input {
         flex-grow: 1;
+        min-width: 140px;
+
+        @include container-down('root', $mobile-width) {
+          min-width: 100%;
+        }
+      }
+
+      @include container-down('root', $mobile-width) {
+        button {
+          width: 100%;
+        }
       }
     }
 
     &_metros {
       @extend %list-reset;
-      @extend %flex-align;
+      display: flex;
+      align-items: flex-start;
       gap: var(--gap-xxl);
       margin-bottom: 8px;
+      width: 100%;
 
-      @include container-down('root', $mobile-width) {
-        & {
-          flex-direction: column;
-          align-items: center;
-          gap: var(--gap-base);
-        }
+      @include container-down('root', 590px) {
+        flex-direction: column;
+        gap: var(--gap-sm);
+      }
+
+      &_modal_list {
+        @extend %flex-column;
+        gap: var(--gap-sm);
       }
 
       &_item {
@@ -111,9 +143,7 @@
         gap: var(--gap-base);
 
         @include container-down('root', $mobile-width) {
-          & {
-            width: 100%;
-          }
+          width: 100%;
         }
 
         svg {
@@ -121,6 +151,22 @@
           max-height: 16px;
           object-fit: contain;
         }
+
+        &_show_more {
+          width: fit-content;
+          padding: 0px 8px;
+          height: 24px;
+          background: #f3f4f6;
+          border: 1px solid #d1d5db;
+          font-weight: 400;
+          font-size: 16px;
+          color: #111928;
+          cursor: pointer;
+        }
+      }
+
+      &_btn_wrapper {
+        position: relative;
       }
     }
 
@@ -128,9 +174,14 @@
       display: none;
       grid-template-columns: repeat(3, 1fr);
       gap: var(--gap-lg);
+      width: 100%;
 
       @include container-down('root', 1160px) {
         display: grid;
+      }
+
+      @include container-down('root', $tablet-lg-width) {
+        grid-template-columns: repeat(2, 1fr);
       }
 
       @include container-down('root', $mobile-width) {
@@ -144,8 +195,10 @@
         img {
           width: 100%;
           height: 100%;
-          max-width: 326px;
-          max-height: 326px;
+          max-width: 530px;
+          max-height: 490px;
+          min-width: 250px;
+          min-height: 326px;
           object-fit: contain;
         }
 
@@ -153,7 +206,7 @@
           @extend %flex-align;
           font-weight: var(--fw-r);
           font-size: var(--fs-sm);
-          color: var(--lighter);
+          color: var(--gray);
         }
 
         &_details span:last-child {
@@ -180,14 +233,16 @@
     @include container-down('root', $tablet-width) {
       @include text-truncate(2);
     }
+  }
 
-    @include container-down('root', 1200px) {
+  @include container-down('root', 900px) {
+    .order_2 {
       order: 2;
     }
   }
 
   a {
-    @include container-down('root', 1200px) {
+    @include container-down('root', 900px) {
       order: 1;
     }
   }
@@ -224,244 +279,12 @@
     padding: 16px clamp(16px, 1vw, 32px);
     border-top: 1px solid var(--lighter);
   }
+
+  &_body_content {
+    &_img {
+      max-width: 140px;
+      height: auto;
+      object-fit: contain;
+    }
+  }
 }
-
-// .list {
-//   @extend %list-reset;
-//   display: grid;
-//   gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-//   grid-template-columns: 1fr;
-
-//   &_item {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     gap: var(--gap-lg);
-
-//     &_gallery {
-//       max-width: $desktop-lg-width;
-//       min-width: 290px;
-//     }
-
-//     &_gallery_slide {
-//       width: 100%;
-//       height: 100%;
-//       max-height: 500px;
-//       object-fit: cover;
-//     }
-
-//     &_content {
-//       @extend %flex-column;
-//       flex-grow: 1;
-//       gap: var(--gap-base);
-
-//       &_header {
-//         @extend %flex-align;
-//         gap: var(--gap-base);
-
-//         @include container-down('root', $mobile-width) {
-//           display: grid;
-//           grid-template-columns: 1fr;
-
-//           .base_title {
-//             order: 2;
-//           }
-//         }
-
-//         a {
-//           min-width: 140px;
-
-//           @include container-down('root', $mobile-width) {
-//             order: 1;
-//           }
-//         }
-//       }
-
-//       &_badge {
-//         @extend %flex-align;
-//         gap: var(--gap-base);
-//         width: fit-content;
-//         margin-bottom: 8px;
-//       }
-
-//       .base_title {
-//         width: auto;
-//         margin-right: auto;
-//         margin-bottom: 8px;
-//         font-weight: var(--fw-m);
-//         font-size: var(--fs-lg);
-//         color: var(--dark);
-
-//         @include container-down('root', $tablet-width) {
-//           @include text-truncate(2);
-//         }
-//       }
-
-//       .base_subtitle {
-//         font-weight: var(--fw-r);
-//         font-size: var(--fs-sm);
-//         color: var(--dark);
-
-//         @include container-down('root', $tablet-width) {
-//           @include text-truncate(1);
-//         }
-//       }
-
-//       .base_text {
-//         font-size: 16px;
-//       }
-//     }
-
-//     &_locations {
-//       @extend %list-reset;
-//       @extend %flex-align;
-//       gap: var(--gap-xxl);
-//       margin-bottom: 8px;
-
-//       @include container-down('root', $mobile-width) {
-//         & {
-//           flex-direction: column;
-//           align-items: center;
-//           gap: var(--gap-base);
-//         }
-//       }
-
-//       &_item {
-//         @extend %flex-align;
-//         gap: var(--gap-base);
-
-//         @include container-down('root', $mobile-width) {
-//           & {
-//             width: 100%;
-//           }
-//         }
-
-//         img {
-//           max-width: 16px;
-//           max-height: 16px;
-//           object-fit: contain;
-//         }
-//       }
-//     }
-
-//     &_properties {
-//       display: grid;
-//       grid-template-columns: repeat(3, 1fr);
-//       gap: var(--gap-xl);
-//       padding: 16px 0;
-//       border-top: 1px solid var(--lighter);
-//       border-bottom: 1px solid var(--lighter);
-
-//       @include container-down('root', $tablet-lg-width) {
-//         grid-template-columns: 1fr;
-//         gap: var(--gap-md);
-//       }
-
-//       &_content {
-//         @extend %flex-column;
-//         gap: var(--gap-base);
-
-//         &_details {
-//           @extend %flex-align;
-//           font-weight: var(--fw-r);
-//           font-size: var(--fs-sm);
-//           color: var(--lighter);
-
-//           &:last-child {
-//             align-items: flex-start;
-//           }
-//         }
-
-//         &_details span:last-child {
-//           margin-left: auto;
-//           font-weight: var(--fw-m);
-//           color: var(--dark);
-//         }
-
-//         &_details div {
-//           @extend %flex-column;
-//           gap: var(--gap-base);
-//           margin-left: auto;
-
-//           & span {
-//             margin-left: auto;
-//             font-weight: var(--fw-m);
-//             color: var(--dark);
-//           }
-//         }
-//       }
-//     }
-//     &_data {
-//       display: none;
-//       grid-template-columns: repeat(2, 1fr);
-//       gap: var(--gap-lg);
-
-//       @include container-down('root', 1160px) {
-//         display: grid;
-//       }
-
-//       @include container-down('root', $mobile-width) {
-//         grid-template-columns: 1fr;
-//       }
-
-//       &_content {
-//         @extend %flex-column;
-//         gap: var(--gap-base);
-
-//         img {
-//           width: 100%;
-//         }
-
-//         &_details {
-//           @extend %flex-align;
-//           font-weight: var(--fw-r);
-//           font-size: var(--fs-sm);
-//           color: var(--lighter);
-//         }
-
-//         &_details span:last-child {
-//           margin-left: auto;
-//           font-weight: var(--fw-m);
-//           color: var(--dark);
-//         }
-
-//         button {
-//           width: 100%;
-//         }
-//       }
-//     }
-//     &_filters {
-//       @extend %flex-align;
-//       gap: var(--gap-base);
-//       width: 100%;
-//       margin-bottom: 32px;
-
-//       input {
-//         flex-grow: 1;
-//       }
-//     }
-//   }
-// }
-
-// .info_description {
-//   font-weight: var(--fw-r);
-//   font-size: var(--fs-sm);
-//   color: var(--lighter);
-// }
-
-// .tab {
-//   @include container-down('root', 1160px) {
-//     display: none;
-//   }
-
-//   &_header th {
-//     padding: 16px clamp(16px, 1vw, 32px);
-//     font-weight: var(--fw-r);
-//     font-size: var(--fs-sm);
-//     color: var(--dark);
-//   }
-
-//   &_body_content td {
-//     padding: 16px clamp(16px, 1vw, 32px);
-//     border-top: 1px solid var(--lighter);
-//   }
-// }
