--- a/src/components/apart-detail/components/apart-detail.module.scss
+++ b/src/components/apart-detail/components/apart-detail.module.scss
@@ -6,24 +6,11 @@
 }
 
 .content {
-  &_section {
+  &_row {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 16px;
-
-    &_column {
-      flex-wrap: nowrap;
-    }
-
-    @include container-down('root', 900px) {
-      &_column {
-        flex-direction: column;
-        align-items: flex-start;
-        column-gap: var(--gap-xl);
-        row-gap: var(--gap-sm);
-      }
-    }
 
     &_gallery {
       max-width: $desktop-lg-width;
@@ -185,12 +172,10 @@
       &_image {
         width: 100%;
         max-width: 670px;
-        height: auto;
+        height: 100%;
+        max-height: 600px;
+        object-position: left;
         object-fit: contain;
-
-        @include container-down('root', $tablet-lg-width) {
-          max-width: 100%;
-        }
       }
 
       &_badge {
@@ -228,12 +213,13 @@
           font-size: var(--fs-lg);
           color: var(--primary);
           margin: 8px 0;
+          white-space: nowrap;
         }
 
         &_measure {
           font-weight: var(--fw-r);
           font-size: var(--fs-sm);
-          color: var(--lighter);
+          color: var(--site-color);
         }
       }
       &_content {
@@ -281,17 +267,24 @@
     }
   }
 
+  &_column {
+    flex-wrap: nowrap;
+
+    @include container-down('root', 900px) {
+      flex-direction: column;
+      align-items: flex-start;
+      column-gap: var(--gap-xl);
+      row-gap: var(--gap-sm);
+    }
+  }
+
   .base_title {
     width: auto;
     margin-right: auto;
     margin-bottom: 0;
     font-weight: var(--fw-m);
-    font-size: var(--fs-lg);
+    font-size: var(--base-subtitle);
     color: var(--dark);
-
-    @include container-down('root', $tablet-width) {
-      @include text-truncate(2);
-    }
   }
 
   @include container-down('root', 900px) {
@@ -307,7 +300,7 @@
   }
   .base_subtitle {
     font-weight: var(--fw-m);
-    font-size: var(--fs-lg);
+    font-size: var(--base-subtitle);
     color: var(--dark);
 
     @include container-down('root', $tablet-width) {
@@ -316,7 +309,7 @@
   }
 
   .base_text {
-    font-size: 16px;
+    font-size: var(--base-text);
     font-weight: var(--fw-r);
     color: var(--dark);
   }
