--- a/src/components/item-detail/components/item-detail.module.scss
+++ b/src/components/item-detail/components/item-detail.module.scss
@@ -6,24 +6,11 @@
 }
 
 .content {
-  &_section {
+  &_row {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 16px;
-
-    &_column {
-      flex-wrap: nowrap;
-    }
-
-    @include container-down('root', 900px) {
-      &_column {
-        flex-direction: column;
-        align-items: flex-start;
-        column-gap: var(--gap-xl);
-        row-gap: var(--gap-sm);
-      }
-    }
 
     &_gallery {
       max-width: $desktop-lg-width;
@@ -170,10 +157,10 @@
       }
     }
 
-    &_data {
+    &_list {
       display: none;
       grid-template-columns: repeat(3, 1fr);
-      gap: var(--gap-lg);
+      gap: var(--gap-xl);
       width: 100%;
 
       @include container-down('root', 1160px) {
@@ -190,35 +177,49 @@
 
       &_item {
         @extend %flex-column;
-        gap: var(--gap-base);
+        gap: var(--gap-lg);
 
         img {
           width: 100%;
           height: 100%;
           max-width: 530px;
           max-height: 490px;
-          min-width: 250px;
-          min-height: 326px;
           object-fit: contain;
         }
 
-        &_details {
-          @extend %flex-align;
-          font-weight: var(--fw-r);
-          font-size: var(--fs-sm);
-          color: var(--gray);
-        }
+        &_aside {
+          @extend %flex-column;
+          @extend %list-reset;
+          gap: var(--gap-sm);
 
-        &_details span:last-child {
-          margin-left: auto;
-          font-weight: var(--fw-m);
-          color: var(--dark);
-        }
+          &_details {
+            @extend %flex-align;
+            font-weight: var(--fw-r);
+            font-size: var(--fs-sm);
+            color: var(--gray);
+          }
 
+          &_details span:last-child {
+            margin-left: auto;
+            font-weight: var(--fw-m);
+            color: var(--dark);
+          }
+        }
         button {
           width: 100%;
         }
       }
+    }
+  }
+
+  &_column {
+    flex-wrap: nowrap;
+
+    @include container-down('root', 900px) {
+      flex-direction: column;
+      align-items: flex-start;
+      column-gap: var(--gap-xl);
+      row-gap: var(--gap-sm);
     }
   }
 
@@ -227,12 +228,8 @@
     margin-right: auto;
     margin-bottom: 0;
     font-weight: var(--fw-m);
-    font-size: var(--fs-lg);
+    font-size: var(--base-subtitle);
     color: var(--dark);
-
-    @include container-down('root', $tablet-width) {
-      @include text-truncate(2);
-    }
   }
 
   @include container-down('root', 900px) {
@@ -248,7 +245,7 @@
   }
   .base_subtitle {
     font-weight: var(--fw-r);
-    font-size: var(--fs-sm);
+    font-size: var(--base-subtitle);
     color: var(--dark);
 
     @include container-down('root', $tablet-width) {
@@ -257,7 +254,7 @@
   }
 
   .base_text {
-    font-size: 16px;
+    font-size: var(--base-text);
   }
 }
 
