--- a/src/shared/components/main-btn/main-btn.module.scss
+++ b/src/shared/components/main-btn/main-btn.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/extends.scss';
+@import '../../styles/mixins.scss';
 
 .root {
   @extend %flex-center;
@@ -34,4 +35,10 @@
 
 .rounded_lg {
   border-radius: 30px;
+}
+
+.displayBtn {
+  @include container-down('root', $tablet-lg-width) {
+    display: none;
+  }
 }
