--- a/src/shared/components/main-link/main-link.module.scss
+++ b/src/shared/components/main-link/main-link.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/extends.scss';
+@import '../../styles/mixins.scss';
 
 .root {
   @extend %flex-center;
@@ -7,7 +8,7 @@
   border: 1px solid transparent;
   background-color: var(--primary);
   color: var(--white);
-  min-width: 140px;
+  min-width: 150px;
   gap: 8px;
 }
 
