--- a/src/shared/components/metros-list-alt/metros-list-alt.module.scss
+++ b/src/shared/components/metros-list-alt/metros-list-alt.module.scss
@@ -23,23 +23,16 @@
 
     &_metros {
       @extend %list-reset;
-      display: flex;
-      align-items: flex-start;
-      gap: var(--gap-xxl);
+      @extend %flex-column;
+      gap: var(--gap-base);
       margin-bottom: 8px;
       width: 100%;
 
       @include container-down('root', 590px) {
-        flex-direction: column;
         gap: var(--gap-sm);
       }
 
-      &_modal_list {
-        @extend %flex-column;
-        gap: var(--gap-sm);
-      }
-
-      &_item {
+      &_details {
         @extend %flex-align;
         gap: var(--gap-base);
 
@@ -52,19 +45,6 @@
           max-height: 16px;
           object-fit: contain;
         }
-
-        &_show_more {
-          width: fit-content;
-          padding: 0px 8px;
-          height: 24px;
-          background: #f3f4f6;
-          border: 1px solid #d1d5db;
-          font-weight: 400;
-          font-size: 16px;
-          color: #111928;
-          cursor: pointer;
-        }
-
         .base_text {
           font-size: var(--gap-sm);
         }
@@ -73,6 +53,17 @@
       &_btn_wrapper {
         position: relative;
       }
+    }
+    &_show_more {
+      width: fit-content;
+      padding: 0px 8px;
+      height: 24px;
+      background: #f3f4f6;
+      border: 1px solid #d1d5db;
+      font-weight: 400;
+      font-size: 16px;
+      color: #111928;
+      cursor: pointer;
     }
   }
 }
