--- a/src/shared/styles/variables/colors.scss
+++ b/src/shared/styles/variables/colors.scss
@@ -11,7 +11,7 @@ $dark: #111928;
 $light: #1a56db;
 $lighter: #d1d5db;
 $gray: #6b7280;
-$green: #046C4E;
+$green: #046c4e;
 
 :root {
   --white: #{$white};
@@ -31,7 +31,7 @@ $green: #046C4E;
 
   // --success: #28a745;
   // --warning: #ffc107;
-  // --danger: #dc3545;
+  --danger: #e02424;
   // --info: #A4CAFE;
   // --muted: #6c757d;
 
