--- a/src/shared/components/navigation/navigation.module.scss
+++ b/src/shared/components/navigation/navigation.module.scss
@@ -2,27 +2,44 @@
 @import '../../styles/mixins.scss';
 
 .root {
-  &_center {
-    ul {
-      justify-content: center;
+  border-top: 1px solid var(--primary);
+  padding: 16px 0;
+
+  @include container-down('header', $tablet-width) {
+    display: none;
+    border-top: none;
+  }
+
+  &_active {
+    @include container-down('header', $tablet-width) {
+      display: block;
+      background-color: red;
     }
   }
 
   ul {
     @extend %flex-align;
     @extend %list-reset;
-    gap: var(--gap-xl);
+    gap: clamp(24px, 4vw, 36px);
+
     li {
+      padding: 16px 0;
+      a {
+        @extend %flex-align;
+        gap: 8px;
+        color: var(--dark);
+        @extend %main-hover;
+      }
       position: relative;
-      padding: var(--gap-md) 0;
 
       &:hover {
-        ul {
+        & > ul {
           display: flex;
+          animation: fadeIn 0.3s ease-in;
         }
       }
 
-      ul {
+      & > ul {
         position: absolute;
         @extend %flex-column;
         gap: var(--gap-xs);
@@ -30,6 +47,8 @@
         padding: var(--gap-sm);
         min-width: 250px;
         top: 50px;
+        // left: 50%;
+        // transform: translateX(-50%);
         display: none;
         box-shadow:
           0 0 0 1px rgba(0, 0, 0, 0.1),
@@ -41,13 +60,11 @@
         }
       }
     }
+  }
 
-    a {
-      color: var(--dark);
-
-      &:hover {
-        color: var(--primary);
-      }
+  &_center {
+    ul {
+      justify-content: center;
     }
   }
 }
