--- a/src/components/result-list/components/result-list.module.scss
+++ b/src/components/result-list/components/result-list.module.scss
@@ -28,7 +28,8 @@
 
     &_gallery {
       max-width: 420px;
-      min-width: 290px;
+      height: 100%;
+      max-height: 410px;
 
       @include container-down('root', $tablet-lg-width) {
         max-width: 1000px;
@@ -204,6 +205,18 @@
       font-weight: var(--fw-r);
       font-size: var(--fs-sm);
       color: var(--site-color);
+    }
+
+    &_show_more {
+      width: fit-content;
+      padding: 0px 8px;
+      height: 24px;
+      background: #f3f4f6;
+      border: 1px solid #d1d5db;
+      font-weight: 400;
+      font-size: 16px;
+      color: #111928;
+      cursor: pointer;
     }
   }
 }
